Minor alignment fixes of footer

--- a/pages/components/footer.module.scss
+++ b/pages/components/footer.module.scss
@@ -2,13 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 0.5em;
 }
 
 .copy {
-  align-self: center;
+  // align-self: center;
 }
 
 .facebookLink {
-  align-self: center;
+  // align-self: center;
   margin-left: 1em;
 }
